# Automated-Tour-Car

./: GPS.py  README.md
ws_lidar/: chrispy  engr_map.pgm  engr_map.yaml  mpu6050.py  my_map.pgm  my_map.yaml  ramp.yaml  test_map.pgm  test_map.yaml
ws_lidar/install/: local_setup.sh  setup.sh
ws_lidar/install/tour_mapping_and_localization/share/tour_mapping_and_localization/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ws_lidar/install/tour_mapping_and_localization/share/tour_mapping_and_localization/launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
ws_lidar/install/tour_mapping_and_localization/share/tour_mapping_and_localization/launch/log/: latest_build
ws_lidar/log/: latest_build
ws_lidar/src/TurtleBot/: package.xml  setup.py
ws_lidar/src/TurtleBot/TurtleBot/: PID_Controller.py  rrt_node.py
ws_lidar/src/gpsPubSub/: package.xml  setup.cfg  setup.py
ws_lidar/src/gpsPubSub/config/: home.pgm  navsat_config.yaml  ramp.pgm  ramp.yaml
ws_lidar/src/gpsPubSub/gpsPubSub/: gps_covariance_calculation.py  gps_odom.py  imu_publisher  subscribeGPS.py  test.py
ws_lidar/src/gps_path_tracking/: setup.cfg  setup.py
ws_lidar/src/lidar/: setup.py
ws_lidar/src/object_avoidance/: setup.py
ws_lidar/src/object_avoidance/launch/: object_avoidance_launch.py
ws_lidar/src/object_avoidance/object_avoidance/: Motor.py  led.py  object_avoidance_publisher.py  object_avoidance_subscriber.py  test_subscriber.py  turntest.py
ws_lidar/src/teleop_control/: setup.py
ws_lidar/src/tour_mapping_and_localization/: CMakeLists.txt
(+118 files in other folders)
