<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tour_mapping_and_localization</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tschew@todo.todo">tschew</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>cartographer</depend>
  <depend>cartographer_ros</depend>
  <depend>nav2_map_server</depend>
  <exec_depend>rviz2</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
